fix: update header & video z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,8 @@ header{
     background-color: #111111;
     height: 90px;
     position: sticky;
+    top: 0;
+    z-index: 5;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -119,6 +121,7 @@ main .jumbotron article .desc {
     text-align: center;
     position: absolute;
     display: flex;
+    z-index: 4;
     justify-content: center;
     align-items: center;
     flex-direction: column;
